# NLP

./: .gitignore  CONTRIBUTING.md  NLP_Recommender_System_Movie.ipynb  NLP_Speech_to_Text_Tensor2Tensor.ipynb  NLP_TextParsing_NLTK_Spacy.ipynb  NLP_TextSummary_TextRank_PageRank.ipynb  NLP_Text_Classifier_WT103_Fast_ai_ULMFiT_.ipynb  NLP_Text_Document_Similarity_Genism.ipynb  NLP_Text_Resume_Spacy.ipynb  NLP_Text_Similarity_Duplication_Fuzzy_Matching.ipynb  NLP_Text_StanfordNLP.ipynb  NLP_Text_Summary_Amazon_Reviews.ipynb  README.md  SECURITY.md  Text_Classification_Fastai.ipynb  Text_LDA_TSNE_Documents.ipynb  Text_LDA_Topic_Modelling_Online_Review.ipynb  pyproject.toml
.github/workflows/: ci.yml  open-dataset-benchmarks.yml
docs/: ARCHITECTURE.md  OPEN_DATASETS.md  REPRODUCIBILITY.md  problem_catalog.md
examples/: benchmark_open_datasets.py  classical_text_classification.py  generate_leaderboard.py  modern_nlp_inference.py
src/nlp_reference/: __init__.py  classical.py  datasets.py  leaderboard.py  modern.py  preprocessing.py
tests/: test_datasets.py  test_leaderboard.py  test_nlp_reference.py
