[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-reference"
version = "0.1.0"
description = "Reference implementations for classical and modern NLP workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saurav Singla" }]
dependencies = [
  "numpy>=1.24,<3",
  "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
transformers = [
  "sentence-transformers>=3.0,<6",
  "transformers>=4.41,<6",
  "torch>=2.2,<3",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<10",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
packages = ["nlp_reference"]
